[tool.poetry]
name = "homework-11-web"
version = "0.1.0"
description = ""
authors = ["fls0 <134416720+fls0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
